[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/64x64placeHolder.png" type="Texture" id=1]
[ext_resource path="res://Characters/CharFSM.gd" type="Script" id=2]
[ext_resource path="res://Characters/smoke.gd" type="Script" id=3]
[ext_resource path="res://Assets/64x64placeHolderCrouch.png" type="Texture" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "crouch",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 14.7472
height = 33.8811

[node name="T-Bone" type="KinematicBody2D"]
collision_mask = 14
script = ExtResource( 3 )
ground_speed = 800
max_speed = 800

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle"

[node name="Sprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )

[node name="CharFSM" type="Node" parent="."]
script = ExtResource( 2 )

[node name="FeetBox" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="FloorRaycasts" type="Node2D" parent="."]

[node name="Floor_1" type="RayCast2D" parent="FloorRaycasts"]
position = Vector2( -10, 30 )
enabled = true
cast_to = Vector2( 0, 3 )
collision_mask = 6

[node name="Floor_2" type="RayCast2D" parent="FloorRaycasts"]
position = Vector2( 10, 30 )
enabled = true
cast_to = Vector2( 0, 3 )
collision_mask = 6

[node name="Label" type="Label" parent="."]
margin_left = -19.7468
margin_top = -48.723
margin_right = 20.2532
margin_bottom = -34.723
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DashTimer" type="Timer" parent="."]
one_shot = true

[node name="TurnTimer" type="Timer" parent="."]
one_shot = true

[node name="IdleBufferTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="ShortHopTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
